--- a/bookings-web/src/components/app/App.css
+++ b/bookings-web/src/components/app/App.css
@@ -12,8 +12,10 @@ body {
     line-height: 25px;
     list-style: none;
     box-shadow: 3px 3px 15px black;
-
+    text-decoration: black;
+    color: black;
 }
+
 .descriptionContainer {
     text-align: center;
     position: relative;
